# samokat_project

./: .gitignore  README.md  config.py  pyproject.toml
data/: address.yaml  cart.yaml  search.yaml
helpers/: data_provider.py  path.py
helpers/pages/: main_page.py
tests/: conftest.py  test_address.py  test_cart.py  test_search.py
utils/: attach.py
