[tool.poetry]
name = "samokat-project"
version = "0.1.0"
description = ""
authors = ["DmitryAsl <aslamovdima10@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.5"
selene = "2.0.0rc9"
allure-pytest = "^2.13.5"
selenium = "4.27.1"
python-dotenv = "1.0.1"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
